# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[build-system]
requires = ["setuptools >= 65"]
build-backend = "setuptools.build_meta"


[project]
name = "comma"
description = "Linux Commit Analyzer"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development",
]
dependencies = [
  "approxidate",
  "gitpython ~= 3.1.31",
  "fuzzywuzzy[speedup] ~= 0.18.0",
  "sqlalchemy[mssql] ~= 1.4.48",
  "openpyxl ~= 3.1.2",

]
dynamic = ["version"]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Ryan Feldman", email = "ryfeldma@microsoft.com"},
  {name = "Abhishek Marathe", email = "abmarath@microsoft.com"},
  {name = "Andrew Schwartzmeyer", email = "andrew@schwartzmeyer.com"},
]

[project.scripts]
comma = "comma.__main__:main"

[project.optional-dependencies]
flake8 = [
  "flake8 ~= 6.0.0",
  "flake8-black ~= 0.3.6",
  "flake8-bugbear ~= 23.3.23",
  "flake8-isort ~= 6.0.0",
  "Flake8-pyproject",
]

black = [
  "black ~= 23.3.0",
]

isort = [
  "isort ~= 5.12.0",
]

pylint = [
  "pylint[spelling]",
]

[project.urls]
homepage = "https://github.com/microsoft/Linux-CommA"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 140  # Enfoced by black and pylint, only for extremely long lines
extend-exclude = [
  "build",
  "Repos",
  ".venv",
]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
py_version=38
skip_gitignore = true
use_parentheses = true

[tool.setuptools.packages.find]
include = ["comma*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "comma.__version__"}